--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ sysinfo.txt
 Assets/Credential/
 Assets/Credential.meta
 Assets/PlayFabSDK/Shared/Public/Resources/
+Assets/PlayFabEditorExtensions/Editor/
