Add Ignore for Photon Credential

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Assets/Credential/
 Assets/Credential.meta
 Assets/PlayFabSDK/Shared/Public/Resources/
 Assets/PlayFabEditorExtensions/Editor/
+Assets/Photon/PhotonUnityNetworking/Resources/
